--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <link rel="stylesheet" href="/css/global.css">
+        <link rel="stylesheet" href="/css/main.css">
+    </head>
     </head>
     <body>
-        header
-
-        Heloy World!
+        <header>
+            <div class="logo-block">
+                <img src="/source/img/logo.svg" alt="">
+                <h2>Мастерская мебели</h2>
+            </div>
+            <div class="menu-block">
+                <li><a href="#">Главная</a></li>
+                <li><a href="#">Наши работы</a></li>
+                <li><a href="#">Контаткы</a></li>
+            </div>
+        </header>
+        <main></main>
+        <footer></footer>
     </body>
 </html>
